--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -20,6 +20,6 @@ map f11 toggle_fullscreen
 enable_audio_bell no
 
 # Window Layout
-# window_padding_width 0 8
-# window_margin_width 8
+# window_padding_width 0
+# window_margin_width 0
 # single_window_margin_width 1
