--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -111,7 +111,7 @@ general {
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = dwindle
+    layout = master
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
@@ -258,10 +258,10 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, j, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, l, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -296,9 +296,10 @@ bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
 # My BINDS
+
 # Hyprshot
-bind = , Print, exec, hyprshot -m output
-bind = $mainMod, Print, exec, hyprshot -m region
+bind = ,Print, exec, hyprshot -m output --output-folder ~/Pictures/ss/
+bind = $mainMod, Print, exec, hyprshot -m region --clipboard only
 # Hyprlock
 bind = $mainMod SHIFT, l, exec, hyprlock 
 
