this looks awesome

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -85,7 +85,7 @@ env = QT_QPA_PLATFORMTHEME,qt6ct
 
 # permission = /usr/(bin|local/bin)/grim, screencopy, allow
 # permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
-# permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
+permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
 
 
 #####################
@@ -111,7 +111,7 @@ general {
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = master
+    layout = dwindle
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
@@ -186,6 +186,7 @@ animations {
 # windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
+windowrulev2 = opacity 0.8 0.8,class:^(org.gnome.Nautilus)$
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -258,10 +259,10 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, j, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, l, movefocus, d
+bind = $mainMod, left, movefocus, l
+bind = $mainMod, right, movefocus, r
+bind = $mainMod, up, movefocus, u
+bind = $mainMod, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -337,3 +338,21 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+#PLUGINS
+
+plugin {
+    hyprexpo {
+        columns = 3
+        gap_size = 5
+        bg_col = rgb(111111)
+        workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
+
+        gesture_distance = 300 # how far is the "max" for the gesture
+    }
+}
+
+#PLUGIN BINDS
+
+# This will toggle HyprExpo when SUPER+g is pressed
+bind = $mainMod, w, hyprexpo:expo, toggle
