--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -50,6 +50,8 @@ $menu = wofi --show drun
 # exec-once = swaync
 exec-once = hyprpanel
 exec-once = hypridle
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = hyprpm reload -n
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -354,5 +356,4 @@ plugin {
 
 #PLUGIN BINDS
 
-# This will toggle HyprExpo when SUPER+g is pressed
 bind = $mainMod, w, hyprexpo:expo, toggle
