--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -118,12 +118,12 @@ general {
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 12
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    active_opacity = 0.92
+    inactive_opacity = 0.88
 
     shadow {
         enabled = true
@@ -188,7 +188,13 @@ animations {
 # windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
-windowrulev2 = opacity 0.8 0.8,class:^(org.gnome.Nautilus)$
+# windowrulev2 = opacity 0.8 0.8,class:^(org.gnome.Nautilus)$
+windowrulev2 = opacity 0.80 0.70,class:^(ristretto)$
+layerrule = blur,ristretto
+windowrulev2 = opacity 0.80 0.70,class:^(lollypop)$
+layerrule = blur,ristretto
+
+
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
