--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -163,7 +163,7 @@ animations {
     #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
     animation = global,        1,     10,    default
     animation = border,        1,     5.39,  easeOutQuint
-    animation = windows,     1,     7,  mybezier, popin 80%
+    animation = windows,       1,     7,  mybezier, popin 80%
     animation = windowsOut,    1,     1.49,  linear,       popin 80%
     animation = fadeIn,        1,     1.73,  almostLinear
     animation = fadeOut,       1,     1.46,  almostLinear
@@ -193,8 +193,6 @@ windowrulev2 = opacity 0.80 0.70,class:^(ristretto)$
 layerrule = blur,ristretto
 windowrulev2 = opacity 0.80 0.70,class:^(lollypop)$
 layerrule = blur,ristretto
-
-
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -288,13 +286,7 @@ bind = $mainMod, 0, workspace, 10
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod SHIFT, 4, movetoworkspace, space, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
@@ -304,14 +296,19 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-# My BINDS
+# My KEYBINDS
+
+bind = $mainMod, c, centerwindow
+binde = $mainMod SHIFT, left, resizeactive, -10 0
+binde = $mainMod SHIFT, right, resizeactive, 10 0
+binde = $mainMod SHIFT, up, resizeactive, 0 -10
+binde = $mainMod SHIFT, down, resizeactive, 0 10
 
 # Hyprshot
 bind = ,Print, exec, hyprshot -m output --output-folder ~/Pictures/ss/
 bind = $mainMod, Print, exec, hyprshot -m region --clipboard only
 # Hyprlock
 bind = $mainMod SHIFT, l, exec, hyprlock 
-
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
