--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -303,6 +303,7 @@ binde = $mainMod SHIFT, left, resizeactive, -10 0
 binde = $mainMod SHIFT, right, resizeactive, 10 0
 binde = $mainMod SHIFT, up, resizeactive, 0 -10
 binde = $mainMod SHIFT, down, resizeactive, 0 10
+bind = $mainMod CTRL, w, exec, waypaper
 
 # Hyprshot
 bind = ,Print, exec, hyprshot -m output --output-folder ~/Pictures/ss/
