--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,114 +1,71 @@
+// Inspired by Catnap
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
-        "type": "file",
-        "color": {
-            "1": "light_magenta"
-        },
-        "source": "~/.config/fastfetch/logos/ascii.txt",
-        "height": 12,
-        "width": 1,
+        "type": "small",
         "padding": {
-            "top": 4,
+            "top": 2,
             "left": 3
         }
     },
+    "display": {
+        "separator": " "
+    },
     "modules": [
-        "break",
         {
-            "type": "custom",
-            "format": "\u001b[90m┌──────────────────Sys Info──────────────────┐"
+            "key": "╭───────────╮",
+            "type": "custom"
         },
         {
-            "type": "os",
-            "key": " OS",
-            "keyColor": "yellow"
+            "key": "│ {#31} user    {#keys}│",
+            "type": "title",
+            "format": "{user-name}"
         },
         {
-            "type": "kernel",
-            "key": "│ ├",
-            "keyColor": "yellow"
+            "key": "│ {#32}󰇅 hname   {#keys}│",
+            "type": "title",
+            "format": "{host-name}"
         },
         {
-            "type": "bios",
-            "key": "│ ├",
-            "keyColor": "yellow"
+            "key": "│ {#33}󰅐 uptime  {#keys}│",
+            "type": "uptime"
         },
         {
-            "type": "packages",
-            "key": "│ ├󰏖",
-            "keyColor": "yellow"
+            "key": "│ {#34}{icon} distro  {#keys}│",
+            "type": "os"
         },
         {
-            "type": "shell",
-            "key": "└ └",
-            "keyColor": "yellow"
+            "key": "│ {#35} kernel  {#keys}│",
+            "type": "kernel"
         },
         {
-            "type": "custom",
-            "format": "\u001b[90m└────────────────────────────────────────────┘"
-        },
-        "break",
-        {
-            "type": "custom",
-            "format": "\u001b[90m┌──────────────────Desktop───────────────────┐"
+            "key": "│ {#36} wm      {#keys}│",
+            "type": "wm"
         },
         {
-            "type": "de",
-            "key": " DE",
-            "keyColor": "blue"
+            "key": "│ {#36}󰇄 desktop {#keys}│",
+            "type": "de"
         },
         {
-            "type": "lm",
-            "key": "│ ├",
-            "keyColor": "blue"
+            "key": "│ {#31} term    {#keys}│",
+            "type": "terminal"
         },
         {
-            "type": "wm",
-            "key": "│ ├",
-            "keyColor": "blue"
+            "key": "│ {#32} shell   {#keys}│",
+            "type": "shell"
         },
         {
-            "type": "terminal",
-            "key": "└ └",
-            "keyColor": "blue"
+            "key": "├───────────┤",
+            "type": "custom"
         },
         {
-            "type": "custom",
-            "format": "\u001b[90m└────────────────────────────────────────────┘"
-        },
-        "break",
-        {
-            "type": "custom",
-            "format": "\u001b[90m┌─────────────Uptime / Age / DT──────────────┐"
-        },
-        {
-            "type": "command",
-            "key": "  OS Age ",
-            "keyColor": "magenta",
-            "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
-        },
-        {
-            "type": "uptime",
-            "key": "  Uptime ",
-            "keyColor": "magenta"
-        },
-        {
-            "type": "datetime",
-            "key": "  DateTime ",
-            "keyColor": "magenta"
-        },
-        {
-            "type": "custom",
-            "format": "\u001b[90m└────────────────────────────────────────────┘"
-        },
-        //        {
-        //            "type": "colors"
-        //        },
-        {
+            "key": "│ {#39} colors  {#keys}│",
             "type": "colors",
-            "paddingLeft": 2,
             "symbol": "circle"
+        },
+        {
+            "key": "╰───────────╯",
+            "type": "custom"
         }
     ]
 }
