--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -260,7 +260,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
@@ -303,6 +303,9 @@ binde = $mainMod SHIFT, left, resizeactive, -10 0
 binde = $mainMod SHIFT, right, resizeactive, 10 0
 binde = $mainMod SHIFT, up, resizeactive, 0 -10
 binde = $mainMod SHIFT, down, resizeactive, 0 10
+bind = $mainMod, R, exec, bash -c "hyprctl reload; hyprctl reload"
+
+#waypaper
 bind = $mainMod CTRL, w, exec, waypaper
 
 # Hyprshot
