changed panel again lol

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,7 +14,6 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
-
 ################
 ### MONITORS ###
 ################
@@ -34,7 +33,6 @@ monitor=HDMI-A-2,1920x1080@60,0x-1080,1
 $terminal = kitty
 $fileManager = nautilus
 $menu = ~/.config/rofi/scripts/launcher_t5
-
 
 #################
 ### AUTOSTART ###
@@ -135,7 +133,7 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 10
+        size = 12
         passes = 2
         ignore_opacity = true
         xray = false
@@ -193,6 +191,7 @@ windowrulev2 = opacity 0.80 0.70,class:^(ristretto)$
 layerrule = blur,ristretto
 windowrulev2 = opacity 0.80 0.70,class:^(lollypop)$
 layerrule = blur,ristretto
+layerrule = blur,hyprpanel
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
