--- a/.config/hyprpanel/config.json
+++ b/.config/hyprpanel/config.json
@@ -5,12 +5,12 @@
   "theme.font.name": "JetBrainsMono Nerd Font",
   "theme.font.label": "JetBrainsMono Nerd Font Medium",
   "theme.font.size": "1.1rem",
-  "theme.bar.floating": true,
+  "theme.bar.floating": false,
   "theme.bar.location": "top",
   "bar.autoHide": "fullscreen",
-  "theme.bar.buttons.enableBorders": true,
+  "theme.bar.buttons.enableBorders": false,
   "theme.bar.border.location": "none",
-  "theme.bar.enableShadow": true,
+  "theme.bar.enableShadow": false,
   "theme.bar.buttons.dashboard.enableBorder": false,
   "bar.workspaces.show_icons": false,
   "bar.workspaces.show_numbered": true,
@@ -33,12 +33,12 @@
   "theme.bar.menus.buttons.radius": "1.5em",
   "theme.bar.menus.progressbar.radius": "1rem",
   "theme.bar.menus.tooltip.radius": "0.3em",
-  "theme.bar.transparent": false,
+  "theme.bar.transparent": true,
   "theme.bar.buttons.style": "default",
   "theme.bar.background": "#11111b",
   "theme.bar.border_radius": "0.7em",
   "theme.bar.opacity": 50,
-  "theme.bar.buttons.dashboard.icon": "#80dceb",
+  "theme.bar.buttons.dashboard.icon": "#241f3b",
   "theme.bar.buttons.workspaces.enableBorder": false,
   "bar.clock.showTime": true,
   "menus.media.displayTimeTooltip": true,
@@ -137,40 +137,40 @@
   "bar.launcher.autoDetectIcon": true,
   "menus.transition": "crossfade",
   "theme.bar.menus.enableShadow": false,
-  "theme.bar.buttons.battery.text": "#94e2d5",
-  "theme.bar.buttons.battery.icon": "#94e2d5",
+  "theme.bar.buttons.battery.text": "#241f3b",
+  "theme.bar.buttons.battery.icon": "#241f3b",
   "theme.bar.buttons.battery.border": "#94e2d5",
   "theme.bar.buttons.dashboard.border": "#80dceb",
-  "theme.bar.buttons.dashboard.background": "#242438",
-  "theme.bar.buttons.workspaces.background": "#242438",
-  "theme.bar.buttons.windowtitle.background": "#242438",
-  "theme.bar.buttons.background": "#242438",
+  "theme.bar.buttons.dashboard.background": "#73c4d9",
+  "theme.bar.buttons.workspaces.background": "#e391bf",
+  "theme.bar.buttons.windowtitle.background": "#e09e82",
+  "theme.bar.buttons.background": "#dc8add",
   "theme.bar.buttons.monochrome": false,
   "theme.bar.buttons.icon_background": "#242438",
   "theme.bar.buttons.separator.color": "#585b70",
-  "theme.bar.buttons.media.background": "#242438",
-  "theme.bar.buttons.volume.background": "#242438",
-  "theme.bar.buttons.network.background": "#242438",
-  "theme.bar.buttons.bluetooth.background": "#242438",
+  "theme.bar.buttons.media.background": "#89b4fa",
+  "theme.bar.buttons.volume.background": "#d18d9f",
+  "theme.bar.buttons.network.background": "#89b4fa",
+  "theme.bar.buttons.bluetooth.background": "#7cc1d8",
   "theme.bar.buttons.workspaces.hover": "#94e2d5",
-  "theme.bar.buttons.workspaces.available": "#80dceb",
-  "theme.bar.buttons.workspaces.occupied": "#fab387",
-  "theme.bar.buttons.workspaces.active": "#ffa0cb",
+  "theme.bar.buttons.workspaces.available": "#89dceb",
+  "theme.bar.buttons.workspaces.occupied": "#3a3535",
+  "theme.bar.buttons.workspaces.active": "#241f3b",
   "theme.bar.buttons.workspaces.numbered_active_highlighted_text_color": "#1e2a38",
-  "theme.bar.buttons.workspaces.numbered_active_underline_color": "#89b4fa",
+  "theme.bar.buttons.workspaces.numbered_active_underline_color": "#241f3b",
   "theme.bar.buttons.workspaces.border": "#ffa0cb",
-  "theme.bar.buttons.windowtitle.text": "#fab387",
-  "theme.bar.buttons.windowtitle.icon": "#fab387",
+  "theme.bar.buttons.windowtitle.text": "#1e2a38",
+  "theme.bar.buttons.windowtitle.icon": "#1e2a38",
   "theme.bar.buttons.windowtitle.border": "#fab387",
-  "theme.bar.buttons.volume.text": "#eba0ac",
-  "theme.bar.buttons.volume.icon": "#eba0ac",
+  "theme.bar.buttons.volume.text": "#242438",
+  "theme.bar.buttons.volume.icon": "#242438",
   "theme.bar.buttons.volume.border": "#eba0ac",
-  "theme.bar.buttons.network.text": "#89b4fa",
-  "theme.bar.buttons.network.icon": "#89b4fa",
+  "theme.bar.buttons.network.text": "#242438",
+  "theme.bar.buttons.network.icon": "#242438",
   "theme.bar.buttons.network.border": "#89b4fa",
   "theme.bar.buttons.bluetooth.icon_background": "#242438",
-  "theme.bar.buttons.clock.text": "#ffa0cb",
-  "theme.bar.buttons.clock.icon": "#ffa0cb",
+  "theme.bar.buttons.clock.text": "#242438",
+  "theme.bar.buttons.clock.icon": "#242438",
   "theme.bar.buttons.clock.border": "#ffa0cb",
   "theme.bar.menus.menu.network.listitems.active": "#89b4fa",
   "theme.bar.menus.menu.network.label.color": "#89b4fa",
@@ -191,7 +191,19 @@
   "menus.dashboard.shortcuts.left.shortcut3.command": "kitty btop",
   "menus.dashboard.directories.left.directory3.command": "bash -c \"xdg-open $HOME/projects/\"",
   "theme.bar.buttons.opacity": 100,
-  "theme.bar.buttons.background_opacity": 70,
-  "theme.bar.outer_spacing": "0.5em",
-  "theme.bar.dropdownGap": "3.5em"
+  "theme.bar.buttons.background_opacity": 100,
+  "theme.bar.outer_spacing": "1.6em",
+  "theme.bar.dropdownGap": "3.5em",
+  "theme.bar.buttons.icon": "#73c1d8",
+  "theme.bar.buttons.media.text": "#242438",
+  "theme.bar.buttons.media.icon": "#242438",
+  "theme.bar.buttons.media.border": "#b4befe",
+  "theme.bar.buttons.bluetooth.text": "#242438",
+  "theme.bar.buttons.bluetooth.icon": "#242438",
+  "theme.bar.buttons.battery.background": "#86c6c4",
+  "theme.bar.buttons.clock.background": "#d793bd",
+  "theme.bar.buttons.notifications.background": "#a3a8eb",
+  "theme.bar.buttons.notifications.total": "#242438",
+  "theme.bar.buttons.notifications.icon": "#242438",
+  "theme.bar.buttons.y_margins": "0.4em"
 }
