--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -18,8 +18,9 @@ background_blur 1
 map f11 toggle_fullscreen
 
 enable_audio_bell no
-cursor_trail 3
-cursor_trail_decay 0.05 0.1
+cursor #ff8cc1
+cursor_trail 2
+cursor_trail_decay 0.05 0.08
 cursor_shape block
 
 # Window Layout
