--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -227,10 +227,11 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = -0.5 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = -0.2 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
+        middle_button_emulation = true
     }
 }
 
@@ -304,6 +305,7 @@ binde = $mainMod SHIFT, up, resizeactive, 0 -10
 binde = $mainMod SHIFT, down, resizeactive, 0 10
 bind = $mainMod, R, exec, bash -c "hyprctl reload; hyprctl reload"
 
+	bind = $mainMod, n, exec, nm-applet --indicator # The --indicator flag might open it as a pop-up window
 #waypaper
 bind = $mainMod CTRL, w, exec, waypaper
 
