added window rule for changing opacity of kitty

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -193,6 +193,9 @@ windowrulev2 = opacity 0.80 0.70,class:^(lollypop)$
 layerrule = blur,ristretto
 layerrule = blur,hyprpanel
 
+#for kitty opacity
+windowrulev2 = opacity 1.2 1.2,class:^(kitty)$
+
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
