made waypaper float

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -308,7 +308,7 @@ binde = $mainMod SHIFT, up, resizeactive, 0 -10
 binde = $mainMod SHIFT, down, resizeactive, 0 10
 bind = $mainMod, R, exec, bash -c "hyprctl reload; hyprctl reload"
 
-	bind = $mainMod, n, exec, nm-applet --indicator # The --indicator flag might open it as a pop-up window
+bind = $mainMod, n, exec, nm-applet --indicator 
 #waypaper
 bind = $mainMod CTRL, w, exec, waypaper
 
@@ -343,8 +343,8 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
+# window rule for waypaper floating
+windowrulev2 = float,class:^(waypaper)$,title:^(Waypaper)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
