added windowrule for download popup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -302,10 +302,10 @@ bind = $mainMod, mouse_up, workspace, e-1
 # My KEYBINDS
 
 bind = $mainMod, c, centerwindow
-binde = $mainMod SHIFT, left, resizeactive, -10 0
-binde = $mainMod SHIFT, right, resizeactive, 10 0
-binde = $mainMod SHIFT, up, resizeactive, 0 -10
-binde = $mainMod SHIFT, down, resizeactive, 0 10
+binde = $mainMod SHIFT, left, resizeactive, -40 0
+binde = $mainMod SHIFT, right, resizeactive, 40 0
+binde = $mainMod SHIFT, up, resizeactive,    0 -40
+binde = $mainMod SHIFT, down, resizeactive,  0  40
 bind = $mainMod, R, exec, bash -c "hyprctl reload; hyprctl reload"
 
 bind = $mainMod, n, exec, nm-applet --indicator 
@@ -345,6 +345,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # window rule for waypaper floating
 windowrulev2 = float,class:^(waypaper)$,title:^(Waypaper)$
+windowrulev2 = float,class:^(brave)$,title:^(This page wants to save)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
