fixed hyprland i think and removed hints in nvim

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -45,7 +45,7 @@ $menu = ~/.config/rofi/scripts/launcher_t1
 exec-once = nm-applet 
 # exec-once = hyprpaper
 # exec-once = waybar 
-# exec-once = swaync
+exec-once = swaync
 exec-once = hyprpanel
 exec-once = hypridle
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -230,11 +230,12 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = -0.2 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = -0.7 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = true
         middle_button_emulation = true
+
     }
 }
 
@@ -243,11 +244,11 @@ gesture = 3, horizontal, workspace
 
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
 
+device {
+    name = elan1205:00-04f3:30e9-touchpad
+    sensitivity = -0.2
+}
 
 ###################
 ### KEYBINDINGS ###
