removed nm-applet

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -42,7 +42,7 @@ $menu = ~/.config/rofi/scripts/launcher_t1
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-exec-once = nm-applet 
+# exec-once = nm-applet 
 # exec-once = hyprpaper
 # exec-once = waybar 
 exec-once = swaync
