--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -364,16 +364,30 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 #PLUGINS
 
 plugin {
-    hyprexpo {
-        columns = 3
-        gap_size = 5
-        bg_col = rgb(111111)
-        workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
+    # hyprexpo {
+    #     columns = 3
+    #     gap_size = 5
+    #     bg_col = rgb(111111)
+    #     workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
+    #
+    #     gesture_distance = 300 # how far is the "max" for the gesture
+    # }
 
-        gesture_distance = 300 # how far is the "max" for the gesture
-    }
 }
 
-#PLUGIN BINDS
+#Hyprexpo
+# bind = $mainMod, w, hyprexpo:expo, toggle
 
-bind = $mainMod, w, hyprexpo:expo, toggle
+#HYPERSPACE
+bind = $mainMod, w, overview:toggle, all 
+plugin:overview:panelColor = rgba(30,30,46,0.85)             # base, soft background  
+plugin:overview:panelBorderColor = rgba(245,194,231,0.9)     # pink accent border
+
+plugin:overview:workspaceActiveBackground = rgba(137,180,250,0.25)     # blue (active glow)
+plugin:overview:workspaceInactiveBackground = rgba(69,71,90,0.25)      # surface1 subtle inactive bg
+
+plugin:overview:workspaceActiveBorder = rgba(250,179,135,0.9)          # peach active border
+plugin:overview:workspaceInactiveBorder = rgba(148,226,213,0.4)        # teal faded border
+
+plugin:overview:dragAlpha = 0.75                                       # visible but smooth transparency
+plugin:overview:disableBlur = false                                    # keep blur for depth
