changed kitty font, small change for hyprpanel

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -44,12 +44,13 @@ $menu = ~/.config/rofi/scripts/launcher_t1
 # exec-once = $terminal
 # exec-once = nm-applet 
 # exec-once = hyprpaper
-# exec-once = waybar 
+# exec-once = ~/.config/waybar/launch.sh
 exec-once = swaync
 exec-once = hyprpanel
 exec-once = hypridle
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = hyprpm reload -n
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 #############################
 ### ENVIRONMENT VARIABLES ###
