--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -6,8 +6,6 @@
 ## upstream: https://github.com/catppuccin/kitty/blob/main/mocha.conf
 ## blurb:    Soothing pastel theme for the high-spirited!
 
-
-
 # The basic colors
 foreground              #CDD6F4
 background              #1a0e1f
@@ -46,34 +44,34 @@ mark3_background #74C7EC
 
 # The 16 terminal colors
 
-# black
-color0 #45475A
-color8 #585B70
+# black 
+color0  #1E1E2E
+color8  #45475A
 
-# red
-color1 #F38BA8
-color9 #F38BA8
+# red 
+color1  #F38BA8
+color9  #F08BA0   
 
-# green
+# green 
 color2  #A6E3A1
-color10 #A6E3A1
+color10 #7FD48E  
 
-# yellow
+# yellow 
 color3  #F9E2AF
-color11 #F9E2AF
+color11 #E8C97D   
 
-# blue
+# blue 
 color4  #89B4FA
-color12 #89B4FA
+color12 #5A93E6
 
-# magenta
+# magenta 
 color5  #F5C2E7
-color13 #F5C2E7
+color13 #D99FD0 
 
-# cyan
+# cyan 
 color6  #94E2D5
-color14 #94E2D5
+color14 #63C4C1   
 
-# white
+# white 
 color7  #BAC2DE
-color15 #A6ADC8
+color15 #D9E0F0  
