--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,11 +1,10 @@
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
-#
 
 foreground #ff8cc1
-font_family CaskaydiaCove Nerd Font Mono
+font_family Inconsolata Nerd Font Mono Bold
+font_weight bold
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
