added clipboard manager

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -51,6 +51,8 @@ exec-once = hypridle
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = hyprpm reload -n
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -69,8 +71,6 @@ env = NVD_BACKEND,direct
 env = __GL_GSYNC_ALLOWED,1  # For smoother rendering if you have VRR
 env = __GL_VRR_ALLOWED,1
 env = QT_QPA_PLATFORMTHEME,qt6ct
-# intel 
-
 
 ###################
 ### PERMISSIONS ###
@@ -317,7 +317,7 @@ binde = $mainMod SHIFT, up, resizeactive,    0 -40
 binde = $mainMod SHIFT, down, resizeactive,  0  40
 bind = $mainMod, R, exec, bash -c "hyprctl reload; hyprctl reload"
 
-bind = $mainMod, n, exec, nm-applet --indicator 
+# bind = $mainMod, n, exec, nm-applet --indicator 
 #waypaper
 bind = $mainMod CTRL, w, exec, waypaper
 
@@ -326,6 +326,8 @@ bind = ,Print, exec, hyprshot -m output --output-folder ~/Pictures/ss/
 bind = $mainMod, Print, exec, hyprshot -m region --clipboard only
 # Hyprlock
 bind = $mainMod SHIFT, l, exec, hyprlock 
+#Clipboard
+bind = $mainMod Shift, V, exec, cliphist list | rofi -dmenu -display-columns 2 -p "Search Clipboard" -theme ~/.config/rofi/launchers/type-1/style-9.rasi | cliphist decode | wl-copy
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
