nemo filemanager and alias for starting psql

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -31,7 +31,7 @@ monitor=HDMI-A-2,1920x1080@60,0x-1080,1
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = nautilus
+$fileManager = nemo
 $menu = ~/.config/rofi/scripts/launcher_t1
 
 #################
