added some nice stuff for nvim and new font

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,13 +3,13 @@ include current-theme.conf
 # END_KITTY_THEME
 
 foreground #ff8cc1
-font_family Inconsolata Nerd Font Mono Bold
+# font_family    DankMonoNerdFontMono-Regular 
 font_weight bold
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+# bold_font      DankMonoNerdFontMono-Regular 
+# italic_font    DankMonoNerdFontMono-Italic 
+# bold_italic_font auto
 
-font_size 20.5
+font_size 18.5
 
 background_opacity 0.8
 background_blur 1
@@ -26,3 +26,11 @@ cursor_shape block
 # window_padding_width 0
 # window_margin_width 0
 # single_window_margin_width 1
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="Operator Mono Lig Book Nerd Font Complete Mono"
+bold_font        auto
+italic_font      family="DankMono Nerd Font Mono"
+bold_italic_font auto
+# END_KITTY_FONTS
