better diagnostic icons for nvim + cooler fonts

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,14 +3,6 @@ include current-theme.conf
 # END_KITTY_THEME
 
 foreground #ff8cc1
-# font_family    DankMonoNerdFontMono-Regular 
-font_weight bold
-# bold_font      DankMonoNerdFontMono-Regular 
-# italic_font    DankMonoNerdFontMono-Italic 
-# bold_italic_font auto
-
-font_size 18.5
-
 background_opacity 0.8
 background_blur 1
 
@@ -31,6 +23,8 @@ cursor_shape block
 # BEGIN_KITTY_FONTS
 font_family      family="Operator Mono Lig Book Nerd Font Complete Mono"
 bold_font        auto
-italic_font      family="DankMono Nerd Font Mono"
-bold_italic_font auto
+italic_font      Maple Mono Italic
+bold_italic_font Maple Mono BoldItalic
+font_weight bold
+font_size 18.5
 # END_KITTY_FONTS
