nm applet keybinding and better telescope

--- a/.config/hypr/modules/keybindings.conf
+++ b/.config/hypr/modules/keybindings.conf
@@ -64,7 +64,7 @@ binde = $mainMod SHIFT, up, resizeactive,    0 -40
 binde = $mainMod SHIFT, down, resizeactive,  0  40
 bind = $mainMod, R, exec, bash -c "hyprctl reload; hyprctl reload"
 
-# bind = $mainMod, n, exec, nm-applet --indicator 
+bind = $mainMod, n, exec, nm-applet --indicator 
 #waypaper
 bind = $mainMod CTRL, w, exec, waypaper
 
