NEW PRETTY TELESCOPE, NEW STARSHIP, NICER CURSOR

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,12 +11,12 @@ map f11 toggle_fullscreen
 enable_audio_bell no
 cursor #ff8cc1
 cursor_trail 2
-cursor_trail_decay 0.05 0.08
+cursor_trail_decay 0.05 0.13
 cursor_shape block
 
 # Window Layout
 # window_padding_width 0
-# window_margin_width 0
+window_margin_width 3
 # single_window_margin_width 1
 
 
